Fix wiki footer on mobile

--- a/awa/plugins/awa-wikis/web/css/wikis.css
+++ b/awa/plugins/awa-wikis/web/css/wikis.css
@@ -424,4 +424,7 @@
     .wiki-page-actions {
         display: none;
     }
+    .wiki-page-footer {
+        width: auto;
+    }
 }
