--- a/awa/web/css/awa.css
+++ b/awa/web/css/awa.css
@@ -63,7 +63,7 @@ footer {
   list-style-type: none;
   padding-right: 20px;
 }
-#awa-hdr li {
+#awa-tools li {
   float: right;
   padding-left: 5px;
   padding-right: 5px;
